fixed jump links

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 
-.about {
+#about {
     background-image: url('../images/portfolio\ collage.png');
     background-repeat: repeat;
     background-position-y: 2rem;
@@ -17,7 +17,7 @@
     position: relative;
 }
 
-.about:after {
+#about:after {
     content: "";
     display: flex;
     position: absolute; 
@@ -37,7 +37,7 @@
     height: 100%;
 }
 
-.blog {
+#blog {
     background-color: azure;
     display: flex;
     flex-direction: column;
@@ -52,7 +52,7 @@
     margin-top: 4rem;
 }
 
-.contact {
+#contact {
     background-color: darkcyan;
     display: flex;
     flex-direction: column;
@@ -149,7 +149,7 @@
     flex-direction: row;
 }
 
-.portfolio {
+#portfolio {
     background-color: azure;
     display: flex;
     flex-direction: column;
